# saju

./: .gitignore  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  README.md  tmp.py
backend/: .env.example  prompts.sqlite3  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: account.py  admin_prompts.py  payments.py  reading_sessions.py  saju.py  webhooks.py
backend/app/schemas/: saju.py
backend/app/services/: calendar_service.py  concern_questions.py  db.py  payment_reconciliation.py  portone.py  prompt_builder.py  prompt_store.py  rate_limiter.py  reading_repository.py  runtime_settings.py  saju_features.py  supabase_auth.py  yonghuishin.py
backend/app/services/llm/: base.py  gemini_provider.py  groq_provider.py  ollama_provider.py
backend/migrations/: 001_supabase_auth_portone_paid_readings.sql
backend/saju_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_config.py  test_gemini_provider.py  test_groq_provider.py  test_ollama_provider.py  test_saju_features.py
frontend/: .env.example  .env.local  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthButtons.tsx  InitialForm.tsx  PaymentButton.tsx  QuestionsForm.tsx  ReadingResult.tsx  SajuOnlyResult.tsx  SajuPillarsTable.tsx  UserMenu.tsx
frontend/lib/: api.ts  localDemo.ts
frontend/lib/supabase/: client.ts  middleware.ts  server.ts
(+2 files in other folders)
